test/should_pass/basic_202.grg
rule r {
	pattern {
		negative {
			if{ true; }
		}
	}
	modify {
	}
}

