test/should_fail/inh_005.grg
using inh_model_005;

rule bla { pattern{} replace{} }
